<resources>
    <string name="app_name">Battery Life</string>
    <string name="loadingStart">start</string>
    <string name="free_ad">Free Ad</string>
    <string name="check">Check</string>
    <string name="power_save">Power save</string>
    <string name="usable_time">Usable Time</string>
    <string name="more">More</string>
    <string name="phone_model">Phone Model</string>
    <string name="used_size">Used size</string>
    <string name="remain_size">Remain size</string>
    <string name="screen_size">Screen size</string>
    <string name="resolution">Resolution</string>
    <string name="camera">Camera</string>
    <string name="basic">Basic</string>
    <string name="hardware">Hardware</string>
    <string name="battery_information">Battery Information</string>
    <string name="version">version 2.0.0</string>
    <string name="update">Update</string>
    <string name="contact">Contact</string>
    <string name="term_of_use">Term of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="attention">Attention</string>
    <string name="battery_health">Battery Health</string>
    <string name="battery_health_alert">Please charge more than 20% of the electricity first to estimate battery\'s health accuratel</string>
    <string name="battery_cell_map">Battery Cell Map</string>
    <string name="analyse">Analyse</string>
    <string name="skip">Skip</string>
    <string name="healthy">Healthy</string>
    <string name="low">Low</string>
    <string name="inactive">Inactive</string>
    <string name="result">Result</string>
    <string name="healthy_result">Healthy:</string>
    <string name="low_result">Low:</string>
    <string name="inactive_result">Inactive:</string>
    <string name="done_btn">Done</string>
    <string name="last_boot">Last boot</string>
    <string name="running_time">Running time</string>
    <string name="cores">Cores</string>
    <string name="internal_storage">Internal storage</string>
    <string name="battery_status">Battery status</string>
    <string name="level">Level</string>
    <string name="temperature">Temperature</string>
    <string name="estimated">Estimated</string>
    <string name="charge_state">Charge state</string>
    <string name="battery_size">Battery size</string>
    <string name="voltage">Voltage</string>
    <string name="unknown">UNKNOWN</string>
    <string name="good">GOOD</string>
    <string name="overheat">OVERHEAT</string>
    <string name="dead">DEAD</string>
    <string name="overvoltage">OVER VOLTAGE</string>
    <string name="unspecified_failer">UNSPECIFIED FAILURE</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="not_charging">Not charging</string>
    <string name="full">Full</string>
    <string name="abnormal_heat_generation_detected_in_your_phone">Abnormal heat generation detected in your phone</string>
    <string name="home">Home</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="time_remaining">It is expected to last for</string>
    <string name="language">Language</string>
</resources>
