<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:background="@drawable/cell_dialog_bg"
    android:layout_height="wrap_content"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        />
    <TextView
        android:drawableRight="@drawable/ic_check_black_24dp"
        android:layout_width="150dp"
        android:drawablePadding="5dp"
        android:id="@+id/cell_health"
        android:layout_height="wrap_content"
        android:text="@string/healthy_result"
        android:layout_margin="10dp"
        android:textStyle="bold"

        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:drawableRight="@drawable/low_cell"
        android:layout_width="150dp"
        android:drawablePadding="5dp"
        android:id="@+id/cell_low"
        android:layout_height="wrap_content"
        android:text="@string/low_result"

        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:drawableRight="@drawable/inactive"
        android:layout_width="150dp"
        android:drawablePadding="5dp"
        android:id="@+id/cell_inactive"

        android:layout_height="wrap_content"
        android:text="@string/inactive_result"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        />
    <com.dx.dxloadingbutton.lib.LoadingButton
        android:id="@+id/button_done"

        android:layout_marginBottom="10dp"
        android:layout_width="150dp"
        android:padding="20dp"

        android:layout_height="60dp"
        app:lb_resetAfterFailed="true"
        app:lb_btnRippleColor="#131313"
        app:lb_btnDisabledColor="#cccccc"
        app:lb_disabledTextColor="#999999"
        app:lb_cornerRadius="20dp"
        app:lb_rippleEnable="true"
        app:lb_btnColor="#FF9800"
        android:layout_gravity="center_horizontal"
        app:lb_btnText="@string/done_btn"


        />

</LinearLayout>